# Sakaar-Struct

./: .gitmodules  CMakeLists.txt  main  main.c
cmake/: FindGMP.cmake
include/: basic.h  memory.h  operation.h  restore.h  smart.h  struct.h
include/basic/: account.h  account_connections.h  activated_accounts.h  address_list.h  block.h  block_history.h  block_list.h  currency.h  generation.h  hash_time.h  hash_time_list.h  packet_list.h  pre_transaction.h  pre_transaction_list.h  smartcontract.h  transaction.h  transaction_list.h  wallet.h  wallet_data.h  wallet_smart.h
include/operation/: op_class.h  op_function.h  op_object.h
include/restore/: restore_block.h  restore_list.h  restore_list_elm.h  restore_queue.h  restore_queue_elm.h  restore_stack.h  restore_stack_elm.h  restore_tree.h
include/smart/: bytecode.h  bytecode_list.h  closure.h  closure_list.h  frame.h  node.h  node_list.h  parser.h  token.h  token_list.h  variable.h  variable_list.h  variable_list_list.h
include/struct/: error.h  float.h  integer.h  linked_list.h  list.h  map.h  object.h  object_structs.h  stack.h  string.h  tlv.h
include/struct/sub/: sub_integer.h
src/: memory.c
src/basic/: account.c  account_connections.c  activated_accounts.c  address_list.c  block.c  block_history.c  block_list.c  currency.c  generation.c  hash_time.c  hash_time_list.c  packet_list.c  pre_transaction.c  pre_transaction_list.c  smartcontract.c  transaction.c  transaction_list.c  wallet.c  wallet_data.c  wallet_smart.c
src/operation/: op_class.c  op_function.c  op_object.c
src/restore/: restore_block.c  restore_list.c  restore_list_elm.c  restore_queue.c  restore_queue_elm.c  restore_stack.c  restore_stack_elm.c  restore_tree.c
src/smart/: bytecode.c  bytecode_list.c  closure.c  closure_list.c  frame.c  node.c  node_list.c  parser.c  token.c  token_list.c  variable.c  variable_list.c  variable_list_list.c
src/struct/: error.c  float.c  integer.c  linked_list.c  list.c  map.c  object.c  stack.c  string.c  sub_integer.c  tlv.c
src/struct/sub/: float_cpu.c  float_gmp.c  integer_cpu.c  integer_gmp.c  sub_integer.c
